Bug 157241 - Freeze when removing table
Summary: Freeze when removing table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0 target:7.6.7 target:24....
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Table-Layouting
  Show dependency treegraph
 
Reported: 2023-09-14 21:32 UTC by Telesto
Modified: 2024-03-22 18:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample (17.83 KB, application/vnd.oasis.opendocument.text)
2023-09-14 21:32 UTC, Telesto
Details
Example B (20.55 KB, application/vnd.oasis.opendocument.text)
2023-09-15 19:55 UTC, Telesto
Details
Example C (same file, but with different highlighting) (17.27 KB, application/vnd.oasis.opendocument.text)
2023-09-15 20:01 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2023-09-14 21:32:11 UTC
Description:
Freeze at undo with a specific undo/redo/undo sequence

Steps to Reproduce:
1. Open the attached file
2. CTRL+A
3. CTRL+C
4. Place cursor after the yellow marking on pag 1.
5. CTRL+SHIFT+V -> Paste as RTF
6. Scroll up to page 1
7. Delete the first two rows of the pasted table (with green content in it)
8. Press and hold CTRL+Z
9. Press and hold CTRL+Y (might freeze, mostly not)
10. Press CTRL+Z -> Freeze



Actual Results:
Freeze



Expected Results:
No freeze


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: be9d7bee88eff89c0d361f23abb447ac2086c3b4
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2023-09-14 21:32:22 UTC
Created attachment 189578 [details]
Sample
Comment 2 Telesto 2023-09-15 19:55:38 UTC
Created attachment 189615 [details]
Example B

Same result, different route
1. Open the attached file 
2. Delete the three tables with green background. One by one (from top to bottom), by putting the cursor in the table and pressing 'delete table' button. 
Result: freeze
Comment 3 Telesto 2023-09-15 20:01:11 UTC
Created attachment 189616 [details]
Example C (same file, but with different highlighting)

1. Open the attached file
2. Go to page 2
3. Place cursor in the left cell of the row marked red
4. Press Delete Row 4x -> Freeze
Comment 4 stragu 2023-09-28 22:09:24 UTC
Can't repro the first version in Description, but can repro the freeze when deleting the first green table in comment 2.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2902ab24ecc5ffbf4907ea83b2028508b9de6364
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: es-MX (en_AU.UTF-8); UI: en-US
Calc: threaded

Let' start with that.

My bibisect steps, note step 2:

1. open attachment 189615 [details]
2. make sure only the first page is visible (by making the window narrow enough to not have two pages side-by-side)
3. with cursor in first green table, delete the table

Result: freeze.

Bibisected with linux-64-24.2 repo to first bad commit cb5a1c6ec7db7ee83f6e2b78a3e726a513d4f202 which points to core commit:

commit c303981cfd95ce1c3881366023d5495ae2edce97
author	Michael Stahl 	Wed Aug 23 15:50:59 2023 +0200
committer	Michael Stahl 	Thu Aug 24 12:43:25 2023 +0200
tdf#156724 sw: layout: fix tables not splitting due to footnotes differently
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155988

Michael, can you please have a look?
Comment 5 stragu 2023-09-28 22:10:16 UTC
(just stressing that the freeze doesn't happen for me if pages 1 and 2 are visible side-by-side)
Comment 6 Commit Notification 2024-03-13 08:22:14 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d3b439de357c8e97c0a73f6f63e67ec980e432d

tdf#157241 sw: layout: inconsistent conditions in lcl_RecalcSplitLine()

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-03-13 10:42:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/2fa450193fbf6013144bdf436076aa4971c3a12e

tdf#157241 sw: layout: inconsistent conditions in lcl_RecalcSplitLine()

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-03-13 14:14:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f22b3bb6876c8094ad7682719fc6a6684ef43b45

tdf#157241 sw: layout: inconsistent conditions in lcl_RecalcSplitLine()

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-03-14 08:43:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/62cb3b8b8d6106c6aeb073b12d84973a107182ef

tdf#157241 sw: fix crash on RTF paste or insert of nested tables

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Stahl 2024-03-14 08:50:27 UTC
both the crash and the loop in comment #2 are fixed now

with the steps from the description i still get a loop, but that's a different bug...
Comment 11 Commit Notification 2024-03-19 17:52:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-2":

https://git.libreoffice.org/core/commit/6a9feb0bba19bcff87e0e1a16fcd03ad3a390dfa

tdf#157241 sw: layout: inconsistent conditions in lcl_RecalcSplitLine()

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-03-19 19:57:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/df5bb0c4343b4a090de3343c7d454a93099989c0

tdf#157241 sw: fix crash on RTF paste or insert of nested tables

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 stragu 2024-03-19 23:35:04 UTC
Thanks Michael, verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 479b5bbe8ca2177ba7574e7aa2308b5d0de1895c
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 14 Commit Notification 2024-03-22 15:07:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/df6fdb0041f8bfd251a4b03030b8bc47f0614c36

tdf#157241 sw: assert when importing ToX in table in rhbz589883-2.docx

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2024-03-22 16:48:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6c155583c83eb19c3520084c90df51eca725da00

tdf#157241 sw: assert when importing ToX in table in rhbz589883-2.docx

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2024-03-22 17:14:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/56676a8cb6899f376d9893392700e096ad589bed

tdf#157241 sw: fix crash on RTF paste or insert of nested tables

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2024-03-22 17:14:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/921abac0a5a0caa46875db640e3432379a5bcfa7

tdf#157241 sw: assert when importing ToX in table in rhbz589883-2.docx

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2024-03-22 18:54:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-2":

https://git.libreoffice.org/core/commit/8506ffb5cef6e18c01350874231e66080efbaf5e

tdf#157241 sw: fix crash on RTF paste or insert of nested tables

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-03-22 18:55:10 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-2":

https://git.libreoffice.org/core/commit/3146edaf76f4533f5872dc687a76a55c691ce4e9

tdf#157241 sw: assert when importing ToX in table in rhbz589883-2.docx

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.