tdf#157241 sw: layout: inconsistent conditions in lcl_RecalcSplitLine()

A mistake, when checking before the condition is "if (pTab == &rTab)"
but when checking after it is "if (pTab)" - the latter is correct as the
former is checked *inside* the block, after resolving to top-level table.

This caused erroneously setting rIsFootnoteGrowth = true in
SwTabFrame::MakeAll() of tab 939 in the bugdoc, when in fact the footnote
container shrunk from 5 to 2 footnotes.

(regression from commit c303981cfd95ce1c3881366023d5495ae2edce97)

Change-Id: Ib4cad9fef0e500ebe7a3636c2371a4108b32fb5f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164717
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 7d3b439de357c8e97c0a73f6f63e67ec980e432d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164733
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>